fixing a couple of issues: 1. dockerfile needed a new package 2. docker images are now being explicitly pulled.

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -29,6 +29,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+            ca-certificates \
             software-properties-common \
             autoconf \
             automake \
