Minor changes: a. Moved NGC version to be read from a single file. b. added a new model config parameter for controlling the  in the backend to be different than what Triton uses.

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -19,8 +19,8 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-ARG BASE_IMAGE=nvcr.io/nvidia/tensorrt:21.08-py3
-FROM ${BASE_IMAGE}
+ARG BASE_IMAGE_VERSION
+FROM nvcr.io/nvidia/tensorrt:${BASE_IMAGE_VERSION}-py3
 
 ARG CMAKE_UBUNTU_VERSION=20.04
 
