--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -83,6 +83,12 @@ RUN rm -f /usr/local/bin/cmake
 # Workspace dir
 WORKDIR /workspace
 
-# Build ONNXRT release branch
-RUN git clone --branch rel-1.9.0  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout 4daa14bc74b5378d5fcb0d6de063a9fa8bd42eac
-RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.4/ --cuda_version 11.4 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests
+# Clone ONNXRT release branch
+RUN git clone --branch rel-1.11.0  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout b713855a980056d89a1e550ad81dc3c19573d7a0
+# initialize the submodules in case we need any customizations
+RUN cd /workspace/onnxruntime && git submodule sync --recursive && git submodule update --init --recursive
+# Build the ONNXRT
+RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.6/ --cuda_version 11.6 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync
+
+# Go to the build directory and perform the install step
+RUN cd /workspace/onnxruntime/build/Linux/Release && cmake -DCMAKE_INSTALL_PREFIX=/workspace/onnxruntime/install -P cmake_install.cmake
