--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -50,7 +50,7 @@ RUN apt-get update && \
             gdb \
             wget && \
     pip3 install --upgrade wheel setuptools && \
-    pip3 install --upgrade grpcio-tools
+    pip3 install --upgrade grpcio-tools flatbuffers
 
 
 # Client build requires recent version of CMake (FetchContent required)
@@ -88,7 +88,7 @@ RUN git clone --branch rel-1.11.1  https://github.com/microsoft/onnxruntime.git 
 # initialize the submodules in case we need any customizations
 RUN cd /workspace/onnxruntime && git submodule sync --recursive && git submodule update --init --recursive
 # Build the ONNXRT
-RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.6/ --cuda_version 11.6 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync
+RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.7/ --cuda_version 11.7 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync
 
 # Go to the build directory and perform the install step
 RUN cd /workspace/onnxruntime/build/Linux/Release && cmake -DCMAKE_INSTALL_PREFIX=/workspace/onnxruntime/install -P cmake_install.cmake
