Updating the dockerfile to work with newer pip/cmake

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -49,6 +49,7 @@ RUN apt-get update && \
             vim \
             gdb \
             wget && \
+		pip3 install --upgrade pip && \
     pip3 install --upgrade wheel setuptools && \
     pip3 install --upgrade grpcio-tools flatbuffers packaging
 
@@ -60,13 +61,11 @@ RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/nul
     if [ "$CMAKE_UBUNTU_VERSION" = "20.04" ]; then \
       apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main' && \
       apt-get update && \
-      apt-get install -y --no-install-recommends \
-        cmake-data=3.18.4-0kitware1ubuntu20.04.1 cmake=3.18.4-0kitware1ubuntu20.04.1; \
+      apt-get install -y --no-install-recommends cmake; \
     elif [ "$CMAKE_UBUNTU_VERSION" = "18.04" ]; then \
       apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main' && \
       apt-get update && \
-      apt-get install -y --no-install-recommends \
-        cmake-data=3.18.4-0kitware1 cmake=3.18.4-0kitware1; \
+      apt-get install -y --no-install-recommends cmake; \
     else \
       echo "ERROR: Only support CMAKE_UBUNTU_VERSION to be 18.04 or 20.04" && false; \
     fi && \
