--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -83,12 +83,12 @@ RUN rm -f /usr/local/bin/cmake
 WORKDIR /workspace
 
 # Clone ONNXRT release branch
-RUN git clone --branch rel-1.13.1  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout 861125ccbc0853b2761bbc268841342550a4ff58
+RUN git clone --branch rel-1.14.0  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout 6ccaeddefa65ccac402a47fa4d9cad8229794bb2
 # initialize the submodules in case we need any customizations
 RUN cd /workspace/onnxruntime && git submodule sync --recursive && git submodule update --init --recursive
 
 # Build the ONNXRT
-RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.8/ --cuda_version 11.8 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync --build_wheel --use_tensorrt_builtin_parser
+RUN cd /workspace/onnxruntime && ./build.sh --use_cuda --cuda_home /usr/local/cuda-11.8/ --cuda_version 11.8 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync --build_wheel --use_tensorrt_builtin_parser --disable_contrib_ops
 
 # Go to the build directory and perform the install step
 RUN cd /workspace/onnxruntime/build/Linux/Release && cmake -DCMAKE_INSTALL_PREFIX=/workspace/onnxruntime/install -P cmake_install.cmake
