--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -23,9 +23,12 @@ ARG BASE_IMAGE_VERSION
 FROM nvcr.io/nvidia/tensorrt:${BASE_IMAGE_VERSION}-py3
 
 ARG CMAKE_UBUNTU_VERSION=22.04
+ARG BUILD_TYPE=Release
 
 # Ensure apt-get won't prompt for selecting options
 ENV DEBIAN_FRONTEND=noninteractive
+
+RUN echo "Building ${BUILD_TYPE} version of ORT."
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -87,12 +90,14 @@ RUN rm -f /usr/local/bin/cmake
 WORKDIR /workspace
 
 # Clone ONNXRT release branch
-RUN git clone --branch rel-1.15.0  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout 638146b79ea52598ece514704d3f592c10fab2f1
+RUN git clone --branch rel-1.16.1  https://github.com/microsoft/onnxruntime.git && cd /workspace/onnxruntime && git checkout 2a1fd2586ff9ea7b2af94a7d4b1b3c124f5f3cda
+RUN cd /workspace/onnxruntime && git cherry-pick -n 207ce2b5994a7c6658e3090b4c62b50dc625b4e3
+
 # initialize the submodules in case we need any customizations
 RUN cd /workspace/onnxruntime && git submodule sync --recursive && git submodule update --init --recursive
 
 # Build the ONNXRT
-RUN cd /workspace/onnxruntime && ./build.sh --allow_running_as_root --use_cuda --cuda_home /usr/local/cuda-12.1/ --cuda_version 12.1 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config Release --skip_tests --skip_submodule_sync --build_wheel --use_tensorrt_builtin_parser --disable_contrib_ops
+RUN cd /workspace/onnxruntime && ./build.sh --allow_running_as_root --use_cuda --cuda_home /usr/local/cuda-12.2/ --cuda_version 12.2 --cudnn_home /usr/lib/x86_64-linux-gnu/ --use_tensorrt --tensorrt_home /usr/lib/x86_64-linux-gnu/ --parallel 8 --build_shared_lib --config ${BUILD_TYPE} --skip_tests --skip_submodule_sync --build_wheel --use_tensorrt_builtin_parser --disable_contrib_ops
 
 # Go to the build directory and perform the install step
-RUN cd /workspace/onnxruntime/build/Linux/Release && cmake -DCMAKE_INSTALL_PREFIX=/workspace/onnxruntime/install -P cmake_install.cmake
+RUN cd /workspace/onnxruntime/build/Linux/${BUILD_TYPE} && cmake -DCMAKE_INSTALL_PREFIX=/workspace/onnxruntime/install -P cmake_install.cmake
